# RLCSD

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/logic_kk/: olmo3_7b_think_grpo.yaml  olmo3_7b_think_opsd.yaml  olmo3_7b_think_rlcsd.yaml  olmo3_7b_think_rlsd.yaml  olmo3_7b_think_sdpo.yaml  olmo3_7b_think_srpo.yaml  qwen3_1_7b_grpo.yaml  qwen3_1_7b_opsd.yaml  qwen3_1_7b_rlcsd.yaml  qwen3_1_7b_rlsd.yaml  qwen3_1_7b_sdpo.yaml  qwen3_1_7b_srpo.yaml  qwen3_4b_grpo.yaml  qwen3_4b_opsd.yaml  qwen3_4b_opsd_ectr.yaml  qwen3_4b_rlcsd.yaml  qwen3_4b_rlsd.yaml  qwen3_4b_rlsd_ectr.yaml  qwen3_4b_sdpo.yaml  qwen3_4b_srpo.yaml  qwen3_8b_grpo.yaml  qwen3_8b_opsd.yaml  qwen3_8b_rlcsd.yaml  qwen3_8b_rlsd.yaml  qwen3_8b_sdpo.yaml  qwen3_8b_srpo.yaml
configs/math_deepmath/: olmo3_7b_think_grpo.yaml  olmo3_7b_think_opsd.yaml  olmo3_7b_think_rlcsd.yaml  olmo3_7b_think_rlsd.yaml  olmo3_7b_think_sdpo.yaml  olmo3_7b_think_srpo.yaml  qwen3_1_7b_grpo.yaml  qwen3_1_7b_opsd.yaml  qwen3_1_7b_rlcsd.yaml  qwen3_1_7b_rlsd.yaml  qwen3_1_7b_sdpo.yaml  qwen3_1_7b_srpo.yaml  qwen3_4b_grpo.yaml  qwen3_4b_opsd.yaml  qwen3_4b_opsd_ectr.yaml  qwen3_4b_rlcsd.yaml  qwen3_4b_rlsd.yaml  qwen3_4b_rlsd_ectr.yaml  qwen3_4b_sdpo.yaml  qwen3_4b_srpo.yaml  qwen3_8b_grpo.yaml  qwen3_8b_opsd.yaml  qwen3_8b_rlcsd.yaml  qwen3_8b_rlsd.yaml  qwen3_8b_sdpo.yaml  qwen3_8b_srpo.yaml
scripts/: _run_verl.sh  download_data.py
scripts/logic_kk/: run_olmo3_7b_think_grpo.sh  (+25 more)
src/: data_utils.py  losses.py  models.py  opsd_format.py  prompts.py  self_distill_main.py  verl_main.py  verl_reward.py
(+26 files in other folders)
