[project]
name = "rlcsd-cu130-env"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "vllm==0.13.0",
    "transformers>=4.45.0",
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "peft>=0.14.0",
    "deepspeed>=0.15.0",
    "hydra-core>=1.3.0",
    "tensorboard>=2.15.0",
    "openai>=1.0.0",
    "math-verify>=0.7.0",
    "pyyaml",
    "tqdm",
    "numpy",
    "huggingface-hub>=0.20.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn>=2.6.0",
]

[tool.uv]
package = false
allow-insecure-host = ["10.30.154.118:8888"]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "python"
url = "http://10.30.154.118:8888/repository/python/simple/"

[[tool.uv.index]]
name = "pypi-official"
url = "http://10.30.154.118:8888/repository/pypi-official/simple/"

[[tool.uv.index]]
name = "pypi-org"
url = "http://10.30.154.118:8888/repository/pypi.org/simple/"
default = true
